--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -18,10 +18,10 @@ jobs:
         with:
           node-version: 20.x
           cache: npm
-          
+
       - name: Configure base path
         run: |
-          sed -i 's/homepage: "\/"/homepage: "\/cra-to-gh-pages"/g' package.json
+          sed -i 's/"homepage": "."/"homepage": "\/cra-to-gh-pages"/g' package.json
 
       - name: Installing NPM packages
         run: npm ci
